--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,25 +12,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout repo
+      uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
+    - name: Checkout Charm
+      uses: actions/checkout@v2
+      with:
+        repository: JHUISI/charm
+        path: charm
     - name: Install dependencies
       run: |
          sudo apt-get -qq update
          sudo apt-get install -y python3-dev python3-setuptools
          sudo apt-get install -y libgmp10 libgmp-dev
          sudo apt-get install -y openssl
-         git clone https://github.com/JHUISI/charm
-         cd charm
          python -m pip install -r requirements.txt
          ./configure.sh
          cd ./deps/pbc && make && sudo ldconfig && cd -
          make
          make install && sudo ldconfig
          make test
-    - uses: actions/checkout@v2
     - name: Lint with flake8
       run: |
         python -m pip install flake8
