--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,7 @@ jobs:
          sudo apt-get install -y python3-dev python3-setuptools
          sudo apt-get install -y libgmp10 libgmp-dev
          sudo apt-get install -y openssl
+         cd charm
          python -m pip install -r requirements.txt
          ./configure.sh
          cd ./deps/pbc && make && sudo ldconfig && cd -
